# UAV-UGV-Target-Search

./: README.md
UGV/: readme.txt
UGV/HARDWARE/LED/: led.c  led.h
UGV/SYSTEM/delay/: delay.c  delay.h
UGV/USER/: JLinkLog.txt  LED.uvguix.ASUS  LED.uvguix.lihao  LED.uvoptx  LED.uvprojx  LED_uvoptx.bak  LED_uvprojx.bak  callback.c  callback.h  can1.c  can1.h  chassis_task.c  chassis_task.h  imu_task.c  imu_task.h  led.c  led.h  main.c  pid.c  pid.h  remote_task.c  remote_task.h  stm32f4xx.h  system_stm32f4xx.c  timer.c  timer.h  usart1.c  usart1.h  usart2.c  usart2.h  usart6.c  usart6.h
uav_detection/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
uav_detection/bags/: localposition-001.bag  localposition-002.bag  localposition-003.bag
uav_detection/include/: camera.h  coordinatetransform.h~  detector.h  flightcontrol.h  flightcontrol.h~  targetdetect.h  targetdetect.h~
uav_detection/launch/: drawpath.launch  flightcontrol.launch  flightcontrol.launch~  targetdetect.launch  uav_detection.launch  uav_detection.launch~
uav_detection/params/: calibresult.txt  detector_params.yml
uav_detection/rviz/: path.rviz
uav_detection/src/: camera.cpp  detector.cpp  detector.cpp~  drawpath_node.cpp  flightcontrol.cpp  flightcontrol.cpp~  flightcontrol_node.cpp  serialtransmission.cpp  targetdetect.cpp  targetdetect.cpp~  targetdetect_node.cpp
ugv_navigation/: CMakeLists.txt  package.xml
ugv_navigation/include/: coordinatetransform.h  recvtarget.h  sendtarget.h  serialtransmission.h  ugvdriver.h
ugv_navigation/launch/: goal_test.launch  keyboardcontrol.launch  odometry.launch  path.launch  recvtarget.launch  sendtarget.launch  slam_navigation.launch  ugvdriver.launch  velodyne.launch
ugv_navigation/maps/: gmapping-005-2.pgm  gmapping-005-2.yaml
ugv_navigation/params/slam_navigation/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
ugv_navigation/params/ugvdriver/: ugvdriver_params.yaml
ugv_navigation/rviz/: slam_navigation.rviz
ugv_navigation/src/: coordinatetransform.cpp  goal_test_node.cpp  keyboardcontrol_node.cpp  odom_test_node.cpp  path_node.cpp  recvtarget.cpp  recvtarget_node.cpp  sendtarget.cpp  sendtarget_node.cpp  ugvdriver.cpp  ugvdriver_node.cpp
